# repo-analyzer

./: README.md  analysis.json  install.py  pyproject.toml  requirements.txt
examples/: README.md  sample_repo_analysis.json
src/repo_analyzer/: __init__.py  analyzer.py  cli.py  github_client.py  models.py  reporters.py  utils.py  web_app.py
src/repo_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repo_analyzer/templates/: error.html  index.html  result.html
tests/: __init__.py  test_analyzer.py  test_utils.py
